# GWSL-Source

./: .gitignore  DEVELOP.md  GWSL_profiles.py  GWSL_ssh.py  LICENSE.md  OpticUI.py  README.md  TODO & CHANGELOG.md  animator.py  blur lol.py  blur.py  build.py  exe_layer.py  iset.py  main - backup.py  main.py  main_old dpi system.py  manager.pot  manager.py  new_service_debug.py  pipfile  requirements.txt  rounder.py  singleton.py  test.py  test_window.py  wsl_tools.py
.github/: FUNDING.yml  notifications.json
.github/workflows/: Build Latest.yml  pylint.yml
GIMP/: add.xcf  check.xcf  config.xcf  custom.xcf  dashboard.xcf  full.xcf  help.xcf  info.xcf  logo.xcf  logodark.xcf  logs.xcf  multi.xcf  multisize testing.xcf  quit.xcf  refresh.xcf  single.xcf  uncheck.xcf
PULSE/etc/pulse/: client.conf  daemon.conf  default.pa  system.pa
VCXSRV/: .Xdefaults  XClock-color  XWin.log.old  system.XWinrc
VCXSRV/bitmaps/: COPYING  Makefile.am  autogen.sh  configure.ac  xbitmaps.pc.in
VCXSRV/fonts/75dpi/: fonts.dir
VCXSRV/locale/: compose.dir  locale.alias  locale.dir
VCXSRV/xkbdata/: compat.dir  geometry.dir  keycodes.dir  symbols.dir  types.dir
VCXSRV_old_1_20_8_1/: .Xdefaults  XCalc-color  xkeysymdb
VCXSRV_old_1_20_8_1/fonts/: fonts.conf
VCXSRV_old_1_20_8_1/locale/: locale.dir
assets/: GWSL_helper.sh  Licenses.txt  Licenses137.txt  Licenses138.txt  Licenses145.txt  preinstall.txt
locale/zh/: manager.po
pymsgbox/: __init__.py  _native_win.py
src/gwsl/: blur.py  cli.py  dashboard.py  exe_layer.py  logger.py  paths.py  profile.py  service.py  settings.py  shortcut_creator.py  shortcut_runner.py  singleton.py  ssh_runner.py  tk_model.py  tray.py  utils.py
src/pymsgbox/: __init__.py  _native_win.py
src/systray/: traybar.py  win32_adapter.py
systray/: traybar.py  win32_adapter.py
win10toast/: __init__.py  __main__.py
win32mica/: __init__.py
(+415 files in other folders)
